<resources>
    <string name="app_name">Show Track</string>
    <string name="user_name">User Name</string>
    <string name="password_login_register">Password</string>
    <string name="login_button">Login</string>
    <string name="register_now">Don\'t have an Account? Register Now</string>
    <string name="remember_me">Remember Me</string>
    <string name="email_login_register">Email</string>
    <string name="retype_password">Retype Password</string>
    <string name="register_button">Register</string>
    <string name="already_registered_sign_in">Already Registered? Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="type">type</string>

    <string name="display_name">Display Name</string>
    <string name="title_activity_navigation">Show Track</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--Setting Strings-->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!--Navigation Menu Strings-->
    <string name="nav_home_text">Home</string>
    <string name="nav_watch_list_text">Watch List</string>
    <string name="nav_search_text">Search</string>
    <string name="nav_share_text">Share</string>
    <string name="nav_send_text">Send</string>
    <string name="nav_feedback_text">Feedback</string>
    <string name="nav_settings_text">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Enter show name</string>
    <string name="place_holder_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
</resources>
