<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/login_page"
        android:fillViewport="true"
        android:scrollbars="vertical"
        tools:context="com.codingmechanic.loginpage.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/txtUserNameLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/user_name"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    tools:targetApi="jelly_bean_mr1" />


                <EditText
                    android:id="@+id/txtPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/password_login_register"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    tools:targetApi="jelly_bean_mr1" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/login_button"
                    android:textAlignment="center"
                    tools:targetApi="jelly_bean_mr1" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <CheckBox
                        android:id="@+id/chkRemember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/remember_me" />
                </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/txtRegisterNow"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/register_now"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>